--- a/cotizador_acerta/templates/base.html
+++ b/cotizador_acerta/templates/base.html
@@ -23,7 +23,7 @@
                 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
                 {# <link rel="stylesheet" href="{% static 'css/ionicons/2.0.1/ionicons.min.css' %}"> #}
                 <!-- Select2 -->
-                <link rel="stylesheet" type="text/css" href="{% static 'css/plugins/select2/select2.min.css' %}">
+                <link rel="stylesheet" type="text/css" href="{% static 'plugins/select2/select2.min.css' %}">
                 <!-- Theme style -->
                 <link rel="stylesheet" href="{% static 'css/AdminLTE.min.css' %}">
                 <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -64,7 +64,9 @@
     <!-- Select2 -->
     <script src="{% static 'js/plugins/select2/select2.full.min.js' %}"></script>
     <!-- AdminLTE App -->
-    <script src="{% static 'js/app.min.js' %}"></script>
+    <!--script src="{% static 'js/app.min.js' %}"></script-->
+    <!-- iCheck -->
+    <script src="{% static 'js/plugins/iCheck/icheck.min.js' %}"></script>
 
     <!-- ChartJs -->
     <script src="{% static 'js/plugins/chartjs/Chart.min.js' %}"></script>
