--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -4,6 +4,8 @@
 {# Load the tag library #}
 {% load bootstrap3 %}
 
+{% load static %}
+
 {# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
@@ -12,20 +14,73 @@
 {% bootstrap_messages %}
 
 {% block extracss %}
+<style type="text/css">
+    #titulo {
+        font-family: Arial;
+        font-size: 29px;
+        color: #B5B6B8;
+    }
+    h3 {
+        font-family: Arial;
+        color: #C6C6C6;
+        font-size: 20;
+    }
+    .panel {
+        border-color: #C6C6C6;
+        border-radius: 2px;
+    }
+    .panel-heading {
+        height: 40px;
+        font-size: 20px;
+        line-height: 20px !important;
+    }
+    #subtitulo {
+        font-family: Arial;
+        font-size: 15px;
+        color: #828489;
+    }
+    #subtitulo2 {
+        font-family: Arial;
+        font-size: 18px;
+        color: #B5B6B8;
+    }
+    .select {
+        color: #FFFFFF; 
+        background-color: #727270;
+        width: 65%;
+        text-align: center;
+    }
+    .back {
+        color: #FFFFFF; 
+        background-color: #E76C42;
+        width: 10%;
+        height: 40px;
+        text-align: center;
+        float: left;
+    }
 
+</style>
 {% endblock extracss %}
 
 
 {% block content %}
-<div class="row" style="padding-top: 10%">
+<div class="row">
+    <div class="col-md-2" style="padding-top: 10%"></div>
+    <div class="col-md-8 text-center" style="padding-top: 10%">
+        <h1 id="titulo" class="text-center"><strong>COTIZACIÓN DE PÓLIZA DE SEGUROS PARA AUTOMÓVIL</strong></h1>
+        <h3 id="subtitulo" class="text-center">3 simples pasos para cotizar en línea la póliza</h3>
+        <img src="{% static 'img/1-2-3_cotizador_acerta_3.png' %}">
+    </div>
+    <div class="col-md-2" style="padding-top: 10%"></div>
+</div>
+<div class="row" style="padding-top: 5%">
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-10 col-sm-10 col-md-2"></div>
-            <div class="col-xs-12 col-sm-12 col-md-8 panel panel-default" style="border-width: 4px; border-color: 8CA5F0;">
+            <div class="col-xs-12 col-sm-12 col-md-8 panel panel-default" style="border-width: 4px; border-color: 8CA5F0; border-top-color: #E76C42;">
                 <div class="panel-body">
                     <div style="margin: 1% auto;">
                         <div class="login-logo">
-                            <a href="#"><b> Cotizador Acerta</b></a>
                         </div><!-- /.login-logo -->
                         <div class="login-box-body">
                             <table style="width:100%">
@@ -151,7 +206,17 @@
         </div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-md-2" style="padding-top: 2px; padding-bottom: 5%;">
+    </div>
+    <div class="col-md-8 text-center" style="padding-top: 2px; padding-bottom: 5%;">
+        <button class="btn btn-lg back">
+          <a id='opcion1' style="color:#ffffff;"href="{% url 'vehiculo'"><strong><  </strong> Volver
+          </a>
+      </button>
+    </div>
+    <div class="col-md-2" style="padding-top: 2px; padding-bottom: 5%;"></div>
+</div>
 {% endblock content %}
 
 {% block custom_script %}
